@startuml

title __SOCIALNET's Class Diagram__\n

  namespace A {
    namespace om.example.socialnet {
      class com.example.socialnet.Controller {
          + friendLabel : TextField
          + listView : ListView
          + name : Label
          + nameField : TextField
          + pictureLabel : TextField
          + pictureView : ImageView
          + profileNameList : ArrayList<String>
          + quote : Label
          + quoteLabel : TextField
          + status : Label
          + statusChangeLabel : TextField
          + statusLabel : Label
          + unfriendLabel : TextField
          ~ friendList : ObservableList<String>
          - profileList : ArrayList<ProfileData>
          + handleAdd()
          + handleAddFriend()
          + handleDelete()
          + handleLookup()
          + handlePicture()
          + handleQuote()
          + handleStatus()
          + handleUnfriend()
          - initialize()
      }
    }
  }
  

  namespace A {
    namespace om.example.socialnet {
      class com.example.socialnet.Main {
          {static} + main()
          + start()
      }
    }
  }
  

  namespace A {
    namespace om.example.socialnet {
      class com.example.socialnet.ProfileData {
          - friends : ArrayList<String>
          - imageLocation : String
          - name : String
          - quote : String
          - status : String
          + ProfileData()
          + addFriend()
          + getFriend()
          + getFriendSize()
          + getImage()
          + getName()
          + getQuote()
          + getStatus()
          + removeFriend()
          + setName()
          + setPicture()
          + setQuote()
          + setStatus()
          + toString()
      }
    }
  }
  

  com.example.socialnet.Controller o-- com.example.socialnet.ProfileData : profileData
  com.example.socialnet.Main -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
